# type-python

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README-PyPI.md  README.md  pyproject.toml  setup.py  type_python.py
.github/: dependabot.yml
crates/typepython_binding/: Cargo.toml
crates/typepython_binding/src/: binding_impl.rs  lib.rs  tests.rs  types.rs
crates/typepython_checking/: Cargo.toml
crates/typepython_checking/benches/: checker.rs
crates/typepython_checking/proptest-regressions/tests/: property_based.txt
crates/typepython_checking/src/: assignments.rs  calls.rs  declaration_semantics.rs  declarations.rs  generic_solver.rs  lib.rs  semantic.rs  source_facts.rs  stubs.rs  tests.rs  type_core.rs  type_expr.rs  type_system.rs
crates/typepython_checking/src/calls/: call_diagnostics.rs  callable_resolution.rs  dataclass.rs  member_access.rs  mod.rs  reporting.rs
crates/typepython_checking/src/tests/: advanced.rs  advanced_generics.rs  calls.rs  mod.rs  property_based.rs  semantic.rs  typed_dict.rs
crates/typepython_checking/src/type_system/: assignability.rs  contextual.rs  expressions.rs  flow.rs  imports.rs  members.rs  mod.rs
crates/typepython_cli/: Cargo.toml
crates/typepython_cli/scripts/: runtime_importability.py  runtime_public_names.py  static_all_names.py
crates/typepython_cli/src/: cli.rs  discovery.rs  main.rs  migration.rs  pipeline.rs  tests.rs  verification.rs
crates/typepython_cli/src/pipeline/: loading.rs  stubs.rs
crates/typepython_cli/src/tests/: consistency.rs  migration.rs  mod.rs  pipeline.rs  verification.rs
crates/typepython_config/: Cargo.toml
crates/typepython_config/src/: lib.rs
crates/typepython_diagnostics/: Cargo.toml
crates/typepython_diagnostics/src/: lib.rs
crates/typepython_emit/: Cargo.toml
crates/typepython_emit/src/: lib.rs  planning.rs  runtime.rs  stubs.rs  tests.rs
crates/typepython_emit/src/snapshots/: typepython_emit__tests__snapshot_inferred_migration_stub.snap  typepython_emit__tests__snapshot_inferred_shadow_stub.snap  typepython_emit__tests__snapshot_stub_async_function.snap  typepython_emit__tests__snapshot_stub_basic_module.snap  typepython_emit__tests__snapshot_stub_class_with_methods.snap  typepython_emit__tests__snapshot_stub_native_pep695_surface.snap  typepython_emit__tests__snapshot_stub_overloaded_function.snap
crates/typepython_graph/: Cargo.toml
crates/typepython_graph/benches/: graph.rs
crates/typepython_graph/src/: lib.rs
crates/typepython_incremental/: Cargo.toml
crates/typepython_incremental/src/: lib.rs
crates/typepython_lowering/: Cargo.toml
crates/typepython_lowering/benches/: lower.rs
crates/typepython_lowering/src/: core.rs  lib.rs  tests.rs  typeddict.rs
crates/typepython_lowering/src/snapshots/: typepython_lowering__tests__snapshot_lower_combined_typepython_constructs.snap  typepython_lowering__tests__snapshot_lower_compat_imports_312.snap  typepython_lowering__tests__snapshot_lower_compat_qualified_names_310.snap  typepython_lowering__tests__snapshot_lower_data_class.snap  typepython_lowering__tests__snapshot_lower_data_class_with_bases.snap  typepython_lowering__tests__snapshot_lower_generic_class_and_function.snap  typepython_lowering__tests__snapshot_lower_generic_interface.snap  typepython_lowering__tests__snapshot_lower_generic_typealias.snap  typepython_lowering__tests__snapshot_lower_interface.snap  typepython_lowering__tests__snapshot_lower_interface_with_bases.snap  typepython_lowering__tests__snapshot_lower_lambda_annotation.snap  typepython_lowering__tests__snapshot_lower_native_fallback_defaults_312.snap  typepython_lowering__tests__snapshot_lower_native_generics_313.snap  typepython_lowering__tests__snapshot_lower_nested_unsafe_in_function.snap  typepython_lowering__tests__snapshot_lower_overload_def.snap  typepython_lowering__tests__snapshot_lower_paramspec.snap  typepython_lowering__tests__snapshot_lower_passthrough_python_source.snap  typepython_lowering__tests__snapshot_lower_sealed_class.snap  typepython_lowering__tests__snapshot_lower_sealed_class_with_bases.snap  typepython_lowering__tests__snapshot_lower_type_param_with_bounds_constraints_defaults.snap  typepython_lowering__tests__snapshot_lower_typealias.snap  typepython_lowering__tests__snapshot_lower_typeddict_keyword_stripping.snap  typepython_lowering__tests__snapshot_lower_unsafe_block.snap
crates/typepython_lsp/: Cargo.toml
crates/typepython_lsp/benches/: incremental.rs
crates/typepython_lsp/src/: analysis.rs  formatting.rs  lib.rs  requests.rs  scheduler.rs  server.rs  tests.rs  workspace.rs
crates/typepython_lsp/src/requests/: analysis.rs  mod.rs  protocol.rs  signature_help.rs  sources.rs  symbols.rs
crates/typepython_lsp/src/requests/analysis/: code_actions.rs  mod.rs  symbols.rs  text.rs  typing.rs
crates/typepython_lsp/src/workspace/: discovery.rs  lifecycle.rs  mod.rs  state.rs
crates/typepython_project/: Cargo.toml
crates/typepython_project/src/: lib.rs
crates/typepython_syntax/: Cargo.toml
crates/typepython_syntax/benches/: parse.rs
crates/typepython_syntax/proptest-regressions/: lib.txt
crates/typepython_syntax/src/: lib.rs
crates/typepython_syntax/src/syntax_parts/: extraction.rs  formatting.rs  metadata_collectors.rs  mod.rs  parsing.rs  surface.rs  type_expr.rs
crates/typepython_syntax/src/syntax_parts/extraction/: ast_backed.rs  calls.rs  control_flow.rs  expr_metadata.rs  guards.rs  lambdas.rs  syntax_extensions.rs  tests.rs
crates/typepython_target/: Cargo.toml
crates/typepython_target/src/: lib.rs
docs/: architecture.md  benchmarks-checker-baseline.md  benchmarks.md  cli-reference.md  configuration.md  contributing.md  diagnostics.md  faq.md  getting-started.md  interop.md  lsp.md  migration-guide.md  syntax-guide.md  type-system.md
scripts/: bootstrap-rust.sh  bump_version.py  downstream_checker_smoke.py  native_target_smoke.py  quickstart_smoke.py  test_annotation_compat.py  test_native_target_smoke.py  test_quickstart_smoke.py  test_repo_contracts.py
stdlib/: BASELINE.toml  datetime.pyi  functools.pyi  (+6 more)
(+41 files in other folders)
