[workspace]
members = [
    "crates/typepython_binding",
    "crates/typepython_checking",
    "crates/typepython_cli",
    "crates/typepython_config",
    "crates/typepython_diagnostics",
    "crates/typepython_emit",
    "crates/typepython_graph",
    "crates/typepython_incremental",
    "crates/typepython_lowering",
    "crates/typepython_lsp",
    "crates/typepython_syntax",
]
resolver = "3"

[workspace.package]
authors = ["unadlib"]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "thin"
