[workspace]
members = [
    "crates/typepython_binding",
    "crates/typepython_checking",
    "crates/typepython_cli",
    "crates/typepython_config",
    "crates/typepython_diagnostics",
    "crates/typepython_emit",
    "crates/typepython_graph",
    "crates/typepython_incremental",
    "crates/typepython_lowering",
    "crates/typepython_lsp",
    "crates/typepython_project",
    "crates/typepython_syntax",
]
resolver = "3"

[workspace.package]
authors = ["unadlib"]
edition = "2024"
license = "MIT"
rust-version = "1.85"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
flate2 = "1"
glob = "0.3"
notify = "6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"
proptest = "1"

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "thin"
