[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "type-python"
version = "0.0.1"
description = "Rust workspace for the TypePython compiler, CLI, and LSP"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "unadlib" }
]

[project.scripts]
typepython = "typepython.__main__:main"

[tool.setuptools]
packages = ["typepython"]
