[package]
name = "typepython-binding"
description = "Binding and symbol creation boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-lowering = { path = "../typepython_lowering" }

[lints]
workspace = true
