[package]
name = "typepython-checking"
description = "Type checking boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-binding = { path = "../typepython_binding" }
typepython-diagnostics = { path = "../typepython_diagnostics" }
typepython-graph = { path = "../typepython_graph" }
typepython-syntax = { path = "../typepython_syntax" }

[lints]
workspace = true
