[package]
name = "typepython-checking"
description = "Type checking boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-binding = { path = "../typepython_binding" }
typepython-config = { path = "../typepython_config" }
typepython-diagnostics = { path = "../typepython_diagnostics" }
typepython-graph = { path = "../typepython_graph" }
typepython-incremental = { path = "../typepython_incremental" }
typepython-syntax = { path = "../typepython_syntax" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "checker"
harness = false

[lints]
workspace = true
