[package]
name = "typepython-config"
description = "Project discovery and configuration loading for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
