[package]
name = "typepython-emit"
description = "Output planning boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-config = { path = "../typepython_config" }
typepython-lowering = { path = "../typepython_lowering" }
typepython-syntax = { path = "../typepython_syntax" }

[lints]
workspace = true
