[package]
name = "typepython-emit"
description = "Output planning boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
littrs-ruff-python-ast = "0.6.2"
littrs-ruff-python-parser = "0.6.2"
littrs-ruff-text-size = "0.6.2"
typepython-config = { path = "../typepython_config" }
typepython-lowering = { path = "../typepython_lowering" }
typepython-syntax = { path = "../typepython_syntax" }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
