[package]
name = "typepython-graph"
description = "Module graph and summary construction boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-binding = { path = "../typepython_binding" }
typepython-syntax = { path = "../typepython_syntax" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "graph"
harness = false

[lints]
workspace = true
