[package]
name = "typepython-incremental"
description = "Incremental state boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
typepython-graph = { path = "../typepython_graph" }

[lints]
workspace = true
