[package]
name = "typepython-incremental"
description = "Incremental state boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typepython-graph = { path = "../typepython_graph" }

[lints]
workspace = true
