[package]
name = "typepython-incremental"
description = "Incremental state boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
typepython-binding = { path = "../typepython_binding" }
typepython-graph = { path = "../typepython_graph" }
typepython-syntax = { path = "../typepython_syntax" }

[dev-dependencies]
[lints]
workspace = true
