[package]
name = "typepython-lowering"
description = "Lowering and source-map boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
littrs-ruff-python-ast = "0.6.2"
littrs-ruff-python-parser = "0.6.2"
littrs-ruff-text-size = "0.6.2"
typepython-diagnostics = { path = "../typepython_diagnostics" }
typepython-syntax = { path = "../typepython_syntax" }

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true

[[bench]]
name = "lower"
harness = false

[lints]
workspace = true
