[package]
name = "typepython-lsp"
description = "Language-server boundary for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
typepython-binding = { path = "../typepython_binding" }
typepython-checking = { path = "../typepython_checking" }
typepython-config = { path = "../typepython_config" }
typepython-diagnostics = { path = "../typepython_diagnostics" }
typepython-emit = { path = "../typepython_emit" }
typepython-graph = { path = "../typepython_graph" }
typepython-incremental = { path = "../typepython_incremental" }
typepython-project = { path = "../typepython_project" }
typepython-syntax = { path = "../typepython_syntax" }
url.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "incremental"
harness = false

[lints]
workspace = true
