[package]
name = "typepython-project"
description = "Shared project discovery and support-source utilities for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
typepython-config = { path = "../typepython_config" }
typepython-diagnostics = { path = "../typepython_diagnostics" }
typepython-syntax = { path = "../typepython_syntax" }

[lints]
workspace = true
