[package]
name = "typepython-syntax"
description = "Source classification and parsing entrypoint for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
littrs-ruff-python-parser = "0.6.2"
typepython-diagnostics = { path = "../typepython_diagnostics" }

[lints]
workspace = true
