[package]
name = "typepython-syntax"
description = "Source classification and parsing entrypoint for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
littrs-ruff-python-ast = "0.6.2"
littrs-ruff-python-parser = "0.6.2"
littrs-ruff-text-size = "0.6.2"
serde.workspace = true
typepython-diagnostics = { path = "../typepython_diagnostics" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "parse"
harness = false

[lints]
workspace = true
