[package]
name = "typepython-target"
description = "Shared target-version and emit-style capability model for TypePython"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
